--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="style.css">
 		<script src="js/knockout-3.3.0.js"></script>
-		<script src="https://maps.googleapis.com/maps/api/js"></script>
-		<script src="js/app.js"></script>
+		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBo5PO8DIjY-j-2UbddSuDcKGV2d4XVx9g"></script>
+		<script type="text/javascript" src="js/app.js"></script>
 	</head>
 	<body>
 		<div id="map-canvas"></div>
+
 	</body>
+
 </html>
