--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="style.css">
 		<script src="js/knockout-3.3.0.js"></script>
 		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBo5PO8DIjY-j-2UbddSuDcKGV2d4XVx9g"></script>
-		<script type="text/javascript" src="js/app.js"></script>
+		<script src="js/app.js"></script>
 	</head>
 	<body>
 		<div id="map-canvas"></div>
