--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 		<script src="js/app.js"></script>
 	</head>
 	<body>
+		<div class="list-view">
+			<h1>Key Locations</h1>
+		</div>
 		<div id="map-canvas"></div>
 
 	</body>
