--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 		<script src="js/app.js"></script>
 	</head>
 	<body>
+		<form class="form">
+			<input class="search-box" placeholder="Search key locations" type="search">
+		</form>
+
 		<div id="map-canvas"></div>
 
 		<div class="list-view">
-			<form class="form">
-				<span class="search-text">Search key locations:</span>
-				<input type="search">
-			</form>
 			<ul data-bind="foreach: Model.locations" class="list">
 				<li data-bind="text: name"></li>
 			</ul>
