--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
 		<title>Neighborhood Map Project</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="style.css">
-		<script src="js/knockout-3.3.0.js"></script>
 		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBo5PO8DIjY-j-2UbddSuDcKGV2d4XVx9g"></script>
-		<script src="js/app.js"></script>
 	</head>
 	<body>
 		<form class="form">
@@ -17,11 +15,13 @@
 		<div id="map-canvas"></div>
 
 		<div class="list-view">
-			<ul data-bind="foreach: Model.locations" class="list">
-				<li data-bind="text: name"></li>
+			<ul data-bind="foreach: locationsList" class="list">
+				<li data-bind="text: $data" class="list-item"></li>
 			</ul>
 		</div>
 
+		<script src="js/knockout-3.3.0.js"></script>
+		<script src="js/app.js"></script>
 	</body>
 
 </html>
