Perform query using knockout observable instead of jquery.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBo5PO8DIjY-j-2UbddSuDcKGV2d4XVx9g"></script>
 	</head>
 	<body>
-		<form data-bind="submit: search" class="form">
-			<input data-bind="value: query, valueUpdate: 'keyup'" autocomplete="off" class="search-box" placeholder="Search key locations" type="search">
+		<form class="form">
+			<input data-bind="value: query, valueUpdate: 'keyup'" autocomplete="on" class="search-box" placeholder="Search key locations" type="search">
 		</form>
 
 		<div id="map-canvas"></div>
