Add UI for a filtering function.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 			<input data-bind="value: query, valueUpdate: 'keyup'" autocomplete="on" class="search-box" placeholder="Search key locations" type="search">
 		</form>
 
+		<div class="key">
+			<span class="filter-text">Filter:  </span>
+			<button class="filter filter-all">all</button><button class="filter filter-food">food</button><button class="filter filter-coffee">coffee</button><button class="filter filter-drinks">drinks</button>
+		</div>
+
 		<div id="map-canvas"></div>
 
 		<div class="list-view">
