--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 		<div class="show-container">
 			<span data-bind="foreach: showOptionsList" class="show">
-				<button data-bind="click: function(data, event) {$parent.show(name, data, event);}" class="show-item">
+				<button data-bind="click: function(data, event) {$parent.setUpCategoryFilter(name, data, event);}" class="show-item">
 					<span data-bind="text: name"></span>
 					<span><img data-bind="attr: {src: $data.image}" class="show-img"></span>
 				</button>
