--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 			<input data-bind="value: query, valueUpdate: 'keyup'" autocomplete="on" class="search-box" placeholder="Search key locations" type="search">
 		</form>
 
-		<div class="show-container">
-			<span data-bind="foreach: showOptionsList" class="show">
-				<button data-bind="click: function(data, event) {$parent.setUpCategoryFilter(name, data, event);}" class="show-item">
+		<div class="filter-container">
+			<span data-bind="foreach: filterOptionsList" class="filter">
+				<button data-bind="click: function(data, event) {$parent.setUpCategoryFilter(name, data, event);}" class="filter-item">
 					<span data-bind="text: name"></span>
-					<span><img data-bind="attr: {src: $data.image}" class="show-img"></span>
+					<span><img data-bind="attr: {src: $data.image}" class="filter-img"></span>
 				</button>
 			</span>
 		</div>
