--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 		<title>Arts District | Los Angeles</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="style.css">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-		<script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyBo5PO8DIjY-j-2UbddSuDcKGV2d4XVx9g'></script>
+		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBo5PO8DIjY-j-2UbddSuDcKGV2d4XVx9g"></script>
 	</head>
 	<body>
 		<form class="form">
@@ -30,8 +29,9 @@
 			</ul>
 		</div>
 
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
+		</script>
 		<script src="js/knockout-3.3.0.js"></script>
 		<script src="js/app.js"></script>
 	</body>
-
 </html>
