--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
 		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBo5PO8DIjY-j-2UbddSuDcKGV2d4XVx9g"></script>
 	</head>
 	<body>
-		<form class="form">
-			<input data-bind="value: query, valueUpdate: 'keyup'" autocomplete="on" class="search-box" placeholder="Search key locations" type="search">
-		</form>
+		<div class="user-inputs">
+			<form class="form">
+				<input data-bind="value: query, valueUpdate: 'keyup'" autocomplete="on" class="search-box" placeholder="Search key locations" type="search">
+			</form>
 
-		<div class="filter-container">
-			<span data-bind="foreach: filterOptionsList" class="filter">
-				<button data-bind="click: function(data, event) {$parent.setUpCategoryFilter(name, data, event);}" class="filter-item">
-					<span data-bind="text: name"></span>
-					<span><img data-bind="attr: {src: $data.image}" class="filter-img"></span>
-				</button>
-			</span>
+			<div class="filter-container">
+				<span data-bind="foreach: filterOptionsList" class="filter">
+					<button data-bind="click: function(data, event) {$parent.setUpCategoryFilter(name, data, event);}" class="filter-item">
+						<span data-bind="text: name"></span>
+						<span><img data-bind="attr: {src: $data.image}" class="filter-img"></span>
+					</button>
+				</span>
+			</div>
 		</div>
 
 		<div data-bind="click: hideList" id="map-canvas"></div>
